# Smart_home_pyproject

./: README.md  pyproject.toml
dataset/: rules.json
smart_home/: automation.py  cli.py  core.py  plot.py
smart_home.egg-info/: PKG-INFO  SOURCES.txt
smart_home/dataset/: sensor_data.csv
